--- a/timeSeries.Rmd
+++ b/timeSeries.Rmd
@@ -7,7 +7,7 @@ library(tidyr)
 
 ```{r}
 allState <- read.csv("allState.csv")
-allState <- allState %>% mutate(start = X2004)
+allState <- allState %>% mutate(start = X2004) %>% mutate(hello = 5)
 Statelong <- allState %>% 
   pivot_longer(
     cols = `X1978`:`X2019`, 
@@ -62,15 +62,15 @@ ggplot(data = longShort, aes(y= Number/start, x = year)) + geom_line() +
 ```
 ```{r}
 # Plot 1: 
-ggplot(data = longShort %>% filter(State=="CALIFORNIA"), aes(y= Number/start, x = year)) + geom_line() + 
-  geom_hline(yintercept=1, color="Red") + geom_vline(xintercept=2010, color="Red") + scale_y_continuous(labels = scales::percent)+ labs(title = "Change in California Prison Population", y="Percent Change") +
-  theme_classic()
+ggplot(data = longShort %>% filter(State=="CALIFORNIA"), aes(y= Number/93000, x = year)) + geom_line() + 
+  geom_hline(yintercept=1.375, color="Red") + geom_vline(xintercept=2010, color="Red") + scale_y_continuous(labels = scales::percent, limits=c(1,2))+ labs(title = "California Prison Crowding", y="Percent Crowded", x="Year") +
+  theme_bw() + theme(plot.title = element_text(hjust = 0.5))
+ggsave("CalPopChange.png")
 ```
 ```{r}
 # Plot 1: 
-ggplot(data = longShort %>% filter(State=="TEXAS" | State == "MISSOURI" | State=="DELAWARE" | State == "WISCONSIN"), aes(y= Number/start, x = year)) + geom_line() + facet_wrap(~State) +
-  geom_hline(yintercept=1, color="Red") + geom_vline(xintercept=2010, color="Red") + scale_y_continuous(labels = scales::percent)+ labs(title = "Change in Control State Prison Populations", y="Percent Change") +
-  theme_classic()
+ggplot(data = longShort %>% filter(State=="TEXAS" | State == "MISSOURI" | State=="DELAWARE" | State == "WISCONSIN" | State == "NEW JERSEY" | State == "ALABAMA"), aes(y= Number/start, x = year)) + geom_line() + facet_wrap(~State) + geom_hline(yintercept=1, color="Red") + geom_vline(xintercept=2010, color="Red") + scale_y_continuous(labels = scales::percent)+ labs(title = "Change in Control State Prison Populations", y="Percent Change") + theme_bw() + theme(plot.title = element_text(hjust = 0.5))
+ggsave("ControlPopChange.png")
 ```
 
 ##Admissions
@@ -175,6 +175,11 @@ ggplot() + geom_line(data = CaliPop, aes(y= Number/start, x = year)) + geom_line
 ```
 
 ```{r}
+dif<-data.frame(Outcome=c(1,4,4,5), Group = c("Exposed", "Exposed", "Control", "Control"), Time =c(0, 10, 0, 10))
+```
 
+```{r}
+ftggplot(data=dif, aes(x=Time, y = Outcome, group=Group, shape =Group)) + geom_line() + geom_point(size=8, color="Red") + geom_abline(intercept=1, slope=0.1, linetype="dashed") + labs(title = "Difference in Difference") + theme_bw() + theme(plot.title = element_text(hjust = 0.5))
+ggsave("diffdiff.png")
 ```
 
